# Agent-X-Lab

./: .editorconfig  .env.example  .env.test  .gitignore  .lighthouserc.json  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.json  Makefile  PROOF_CHECKLIST.md  README.md  RELEASES_MANIFEST.json  SECURITY.md  TESTING.md  UNIFIED_SYSTEM.md  VR.json  docker-compose.yml  eslint.config.js  package-lock.json  package.json  playwright.config.ts  protocol.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  vite.config.ts  vitest.config.ts  zero_entropy_intake_template.xml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: action-pin-audit.yml  architecture-drift-guard.yml  ci-dispatch.yml  (+20 more)
.lovable/: plan.md
ad2026_state/: AD2026_STATUS.json
architecture/: ADVERSARIAL-ORCHESTRATION.md  NAMING-CONVENTIONS.md
artifacts/: AC.root_key.pub  AC_VERSION.json  ARB.decision.memo  PhaseG.contract  verifier.rules
build_proof/: ITERATION_CYCLE_01_CHECKPOINT.md  SYSTEM_OBJECT.det1.json  architecture_contract.jsonl
catalog/: INDEX.json  index.json
configs/: sg.config.json  sg.config.schema.json
control-plane/: AXL_CP_LOCK.json
cp/: AXL_INTEGRATION_MAP.yaml  INVENTORY.json  UNIFIED.manifest.json
docs/: 00_SYSTEM_OVERVIEW.md  01_ARCHITECTURE.md  02_RUNTIME_BEHAVIOR.md  03_STATE_AND_DATAFLOWS.md  04_TEST_STRATEGY.md  05_E2E_CONTRACTS.md  06_CI_AND_RELEASE.md  07_TROUBLESHOOTING.md  08_SECURITY_GATES.md  09_BRANCH_PROTECTION.md  11_REPO_HYGIENE.md  98_CONTRACT_INDEX.md  99_CHECKLIST.md  ARCHITECTURE.md  BRANCH_PROTECTION.md  CI_GATES.md  ERRORS.md  LLM_INTELLIGENCE_MAP.md  OPERATIONS.md  REPO_HYGIENE.md  RIS_ALGORITHMS.md  RIS_SCHEMAS.md  RIS_SYSTEM_OBJECT_SPEC.md  SPEC.md  TECHDEBT_INVENTORY.md  TECHNICAL_DEBT_REPORT_2026-02-26.md  TECH_DEBT_PROTOCOL.md  THREAT_MODEL.md  merge-gates.md  release-checklist.md  release-notes.md  release-policy.md  slo.md  supply-chain.md
e2e/: smoke.spec.ts
engine/: .gitignore  SECURITY.md  requirements-dev.txt  requirements.txt
evidence/: TD0_BASELINE.json  TD0_COMMAND_LOG.txt  TD1_BASELINE.json  TD1_COMMAND_LOG.txt  agents_state.json  ui_bundle_baseline.json  ui_bundle_size.txt
exoneural_governor/: __init__.py  __main__.py  backend.py  catalog.py  cli.py  config.py  inventory.py  manifest.py  network.py  redaction.py  release.py  util.py  vr.py
exoneural_singularity_stack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
policies/: action_pinning_allowlist.json  action_pinning_policy.md
proof/: change_summary.md  tool_versions.txt
protocols/: Agent-X-Lab-SSOT-Drift-Eliminator_Codex_SystemPrompt_v2026.02-r2.md  IOPS-2026.md
schemas/: eval_report.schema.json  object_manifest.schema.json  root_manifest.schema.json
scripts/: analyze-bundle.mjs  arsenal.py  bootstrap.sh  e2e-preflight.mjs  ensure-dist.mjs  generate_manifest.py  generate_proof_bundle.py  measureBundle.mjs  rebuild_catalog_index.py  rebuild_checksums.py  run-a11y-ci.mjs  run_object_evals.py  schema_validate.py  validate_arsenal.py
sources/legacy/E-legacy_snapshot/: constraints.py  dao_config.example.json  evidence.py  metrics.py  pyproject.toml  roles.py  tests.py  truth_plane.py
src/: App.tsx  index.css  main.tsx
tests/: conftest.py  test_doctor.py  test_failure_modes.py  test_generate_proof_bundle.py  test_isolation_fixture.py  test_network_backend.py  test_observability_smoke.py  test_pip_audit_gate.py  test_prompt_lint.py  test_protocol_step_paths.py  test_readme_contract.py  test_rebuild_checksums.py  test_redaction.py  test_release_guard.py  test_repo_invariants.py  test_run_gate.py  test_stack.py  test_titan9_inventory.py  test_verify_release_integrity.py  test_vr_provenance_id.py  test_witness.py  test_workflow_guards.py
tools/: ast_dependency_mapper.py  doctor.py  feg_r8_verify.py  generate_titan9_proof.py  nongit_runner.py  pin_actions.py  pip_audit_gate.py  prompt_lint.py  release_guard.py  run_gate.py  secret_scan_gate.py  titan9_inventory.py  verify_action_pinning.py  verify_protocol_consistency.py  verify_readme_contract.py  verify_release_integrity.py  verify_workflow_hygiene.py  vitest-custom-coverage.ts  witness.py
tools/dao-arbiter/: CONTRIBUTING.md  README.md  pyproject.toml
tools/dao-arbiter/dao_lifebook/: __init__.py  truth_plane.py
tools/dao-arbiter/docs/: ANTHROPIC_SAFETY_EMAIL.md
tools/dao-arbiter/examples/: FAIL_PACKET.example.json
tools/dao-arbiter/spec/: PASS_CONTRACT_template.md
udgs_core/: __init__.py  autonomous_audit.py  cli.py
(+887 files in other folders)
