[build-system]
requires = ["setuptools==75.6.0", "wheel==0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exoneural-singularity-stack"
version = "0.1.0"
description = "Deterministic, mechanized governance stack for prompt catalogs + proof bundles + release finalization."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Exo-Neural Stack"}]
dependencies = [
  "PyYAML==6.0.2",
  "jsonschema==4.23.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
]

[project.scripts]
sg = "exoneural_governor.cli:main"

[tool.setuptools]
packages = ["exoneural_governor"]
include-package-data = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
