[build-system]
requires = ["setuptools==75.6.0", "wheel==0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentx-lab"
version = "0.1.0"
description = "Deterministic cognitive-agent architecture with mechanized validation for prompt catalogs, evaluation, and release finalization."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Exo-Neural Stack"}]
dependencies = [
  "PyYAML==6.0.2",
  "jsonschema==4.23.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
]

[project.scripts]
agentx-lab = "exoneural_governor.cli:main"
sg = "exoneural_governor.cli:main"

[tool.setuptools]
packages = ["exoneural_governor"]
include-package-data = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = [
  "vendor",
  "artifacts",
  ".venv",
  ".ruff_cache",
  "build",
  "dist",
]

[tool.mypy]
python_version = "3.11"
exclude = ["^vendor/", "^objects/.*/eval/"]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
