[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dao-lifebook"
version = "2026.2.0"
description = "Deterministic AI Orchestration — a personal engineering OS"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.5",
    "httpx>=0.27",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.3",
]

[project.scripts]
dao = "dao_lifebook.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["dao_lifebook"]
python_files = ["tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
