[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dao-lifebook"
version = "2026.1.0"
description = "Deterministic AI Orchestration — Personal Engineering OS"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Vasylenko Yaroslav"}]

dependencies = [
    "pydantic>=2.5",
    "httpx>=0.27",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dao = "dao_lifebook.cli:main"

[tool.pytest.ini_options]
testpaths = ["dao_lifebook"]
python_files = ["tests.py"]
